test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/incomplete_subscript.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  struct
  identifier(s)
  ;
  extern
  struct
  identifier(s)
  *
  identifier(ptr)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  identifier(ptr)
  [
  const int(0)
  ]
  ;
  }
